--- a/server/index.html
+++ b/server/index.html
@@ -6,9 +6,10 @@
     <title>Cerebral</title>
     <meta name="description" content="just another react + webpack boilerplate">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="/style.css"/>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">${body}</div>
+    <script src="/main.js"></script>
   </body>
 </html>
