replace boilerplate description

--- a/server/index.html
+++ b/server/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Cerebral</title>
-    <meta name="description" content="just another react + webpack boilerplate">
+    <meta name="description" content="A state controller with its own debugger">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/style.css"/>
   </head>
