Optimized images and added favicon

--- a/server/index.html
+++ b/server/index.html
@@ -6,6 +6,10 @@
     <title>Cerebral</title>
     <meta name="description" content="A state controller with its own debugger">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
     <link rel="stylesheet" href="/style.css"/>
   </head>
   <body>
