--- a/server/index.html
+++ b/server/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
-    <link rel="stylesheet" href="/style.css"/>
+    <link rel="stylesheet" href="/styles.css"/>
   </head>
   <body>
     <div id="app">${body}</div>
