Refactored and added github readme support

--- a/server/index.html
+++ b/server/index.html
@@ -11,6 +11,9 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="/styles.css"/>
+    <script>
+      window.BOOTSTRAP_STATE = ${BOOTSTRAP_STATE};
+    </script>
   </head>
   <body>
     <div id="app">${body}</div>
