Created base structure

--- a/server/index.html
+++ b/server/index.html
@@ -11,6 +11,8 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="/styles.css"/>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:700,500,400' rel='stylesheet' type='text/css' />
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Mono' rel='stylesheet' type='text/css' />
     <script>
       window.BOOTSTRAP_STATE = ${BOOTSTRAP_STATE};
     </script>
