--- a/server/index.html
+++ b/server/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Cerebral</title>
-    <meta name="description" content="A state controller with its own debugger">
+    <meta name="description" content="make sense of complex apps">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
