fixed launch site

--- a/server/index.html
+++ b/server/index.html
@@ -19,6 +19,7 @@
   </head>
   <body>
     <div id="app">${body}</div>
+    <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
     <script src="/main.js"></script>
   </body>
 </html>
